2023-08-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/README.txt,
	  doc/sdccman.lyx:
	  Basic r800 port documentation.
	* support/scripts/sdcc.nsi:
	  Include r800 library in Windows installer.
	* src/z80/gen.c:
	  Cost function fixes for z80-related backends.

2023-08-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge r800 branch to trunk.
	* support/regression/Makefile.in:
	  Include r800 port in test-z80 regression test target.
	* support/regression/MakeList:
	  Disable a test for r800 that fails for all z80-related ports.

2023-08-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* sim/ucsim/z80.src/inst_ed.cc,
	  src/z80/gen.c,
	  src/z80/peep.c:
	  Fixes for R800 multiplication instructions.

2023-08-27 Felix Salfelder <felix AT salfelder.org>

	* support/regression/Makefile.in: deal with longer subresult list.
	* support/regression/tests/bitintshift.c.in: more subcases.

2023-08-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/fwk/include/testfwk.h,
	  support/regression/ports/ucr800/spec.mk:
	  r800 regression test infrstructure.
	* src/z80/gen.c:
	  r800 calling convention fix.

2023-08-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/gte/960830-1.c: deleted, is only relevant for i386
	* support/regression/ports/mcs51-common/support.c: don't include mcs51reg.h,
	  define TI & SBUF directly instead, prevents name clash with B
	* support/regression/MakeList: enabled tcc_30_hanoi
	* support/regression/cases/Makefile.in: remove disabled warnings,
	  fixed warnings
	* support/regression/collate-results.py,
	* support/regression/compact-results.py: cosmetics
	* support/regression/gte/20001124-1.c,
	* support/regression/gte/20001229-1.c,
	* support/regression/gte/20010119-1.c,
	* support/regression/gte/20030216-1.c,
	* support/regression/gte/20091229-1.c,
	* support/regression/gte/900409-1.c,
	* support/regression/gte/930930-2.c,
	* support/regression/gte/950426-2.c,