@@ -202,7 +202,7 @@
 #define X_LJP                97
 #define X_LCALL              98
 #define X_BOOL               99
-
+#define X_LDP               100
 #define X_R3K_MODE          101
 #define R3K_INH1            102
 #define R3K_INH2            103
